tests/unit-fail/failing/j035d.c
int main(void) {
      int x = 0;
      ++x + x; x + ++x;
      return 0;
}
